<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="preferences" translatable="false">Preferences</string>

    <!-- Main UI -->
    <string name="textview_RMS_text" translatable="false">RMS:dB \n-XXX.X</string>
    <string name="textview_cur_text" translatable="false">Cur :XXXXX.XHz(AX#+XX) -XXX.XdB</string>
    <string name="text_cur" translatable="false">Cur :</string>
    <string name="textview_peak_text" translatable="false">Peak:XXXXX.XHz(AX#+XX) -XXX.XdB</string>
    <string name="text_peak" translatable="false">Peak:</string>
    <string name="textview_rec_text" translatable="false">Rec: 00:00:00.0, Remain: 0000:00:00</string>
    <string name="text_rec" translatable="false">Rec:</string>
    <string name="text_remain" translatable="false">", Remain: "</string>
    <string name="sample_s" translatable="false">SAMPLE/S</string>
    <string name="fftlen" translatable="false">FFT LEN</string>
    <string name="ave" translatable="false">N AVE</string>
    <string name="sample_rates_name" translatable="false">SAMPLE/S::0</string>
    <string name="fft_len_name" translatable="false">FFT LEN::0</string>
    <string name="fft_ave_num_name" translatable="false">N AVE::0</string>
    <string name="button_freq_scaling_mode" translatable="false">linear::log::note</string>
    <string name="button_run" translatable="false">run::stop</string>
    <string name="button_dbA" translatable="false">dB::dBA</string>
    <string name="button_spectrum_spectrogram_mode" translatable="false">Spectrum::Spectrogram</string>
    <string name="button_recording" translatable="false">Start::Stop</string>

    <!-- permission dialog -->
    <string name="permission_explanation_title" translatable="false">Permission denied</string>
    <string name="permission_explanation_recorder" translatable="false">This app analyze the sound heard by *this* device. A permission of using microphone is required.</string>
    <string name="permission_explanation_write" translatable="false">To record the sound, A permission of using read/write is required.</string>

    <!-- Show range dialog -->
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="show_range_tv_fL" translatable="false">"Set lower and upper Frequency Bound"</string>
    <string name="show_range_tv_fH" translatable="false">"(%1$.2f&lt;= Hz &lt;=%2$.2f)"</string>
    <string name="show_range_tv_dBL" translatable="false">"Set lower and upper dB Bound"</string>
    <string name="show_range_tv_dBH" translatable="false">"(%1$.2f&lt;= dB &lt;=%2$.2f)"</string>
    <string name="et_freq_setting_lower_bound" translatable="false">frequency lower bound</string>
    <string name="et_freq_setting_upper_bound" translatable="false">frequency upper bound</string>
    <string name="et_db_setting_lower_bound" translatable="false">dB lower bound</string>
    <string name="et_db_setting_upper_bound" translatable="false">dB upper bound</string>
    <string name="show_range_lock" translatable="false">Lock Range</string>
    <string name="show_range_button_lock" translatable="false">Load Previous</string>

    <!-- Pop-up menu -->
    <string name="menu_manual" translatable="false">User Manual</string>
    <string name="menu_preferences" translatable="false">Preferences</string>
    <string name="menu_test" translatable="false">Recorder Sources Test</string>
    <string name="menu_set_view" translatable="false">View Range Setting</string>
    <string name="menu_manual_condensed" translatable="false">Manual</string>
    <string name="menu_preferences_condensed" translatable="false">Preferences</string>
    <string name="menu_test_condensed" translatable="false">Test</string>
    <string name="menu_set_view_condensed" translatable="false">Set View</string>

    <!-- InfoRecActivity (Test Recorder Sources) -->
    <string name="text_view_info_log_0" translatable="false">Testing AudioRecord properties..</string>
    <string name="title_activity_info_rec" translatable="false">Info of Input Audio</string>
    <string name="rec_tester_std" translatable="false">Standard Sources</string>
    <string name="rec_tester_support" translatable="false">Supported Sources</string>
    <string name="rec_tester_all" translatable="false">All Sources</string>
    <string name="rec_tester_hint1" translatable="false">"(Only test MONO, 16BIT format)\n"</string>
    <string name="rec_tester_col1" translatable="false">"\nSampleRate MinBuf    (Time)\n"</string>
    <string name="rec_tester_col2" translatable="false">"%1$5d Hz  %2$4d Bytes (%3$4.1f ms)\n"</string>
    <string name="rec_tester_error1" translatable="false">" Hz  ERROR\n"</string>
    <string name="rec_tester_hint2" translatable="false">"\n--- Audio Source Test ---\n"</string>
    <string name="rec_tester_col3" translatable="false">"\nSource: %1$s\n"</string>
    <string name="rec_tester_col3_row1" translatable="false">"%1$5d Hz  "</string>
    <string name="rec_tester_col3_succeed" translatable="false">"succeed"</string>
    <string name="rec_tester_col3_error1" translatable="false">"Illegal Argument"</string>
    <string name="rec_tester_col3_error2" translatable="false">"read 0 byte"</string>
    <string name="rec_tester_col3_error3" translatable="false">"fail to read sample"</string>
    <string name="rec_tester_col3_error4" translatable="false">"fail to initialize"</string>
    <string name="rec_tester_col3_hint1" translatable="false">"(source alter: %1$s)"></string>
    <string name="rec_tester_col3_end" translatable="false">".\n"</string>
    <string name="True" translatable="false">true</string>

    <!-- preferences -->
    <string name="preference_generalSettings" translatable="false">General Settings</string>
    <string name="preference_keepScreenOn_1" translatable="false">Prevent display from turning off</string>
    <string name="preference_keepScreenOn_2" translatable="false">Keep screen on</string>
    <string name="preference_audioSource_1" translatable="false">Audio source for spectrum</string>
    <string name="preference_audioSource_2" translatable="false">Audio source</string>
    <string name="preference_windowFunction_1" translatable="false">Window function for (local) short-time Fourier transform (STFT)</string>
    <string name="preference_windowFunction_2" translatable="false">Window Function</string>
    <string name="preference_windowOverlap_1" translatable="false">Higher percentage for finer time resolution, lower to save CPU</string>
    <string name="preference_windowOverlap_2" translatable="false">Time window overlap</string>
    <string name="preference_spectrumAppearance" translatable="false">Spectrum appearance</string>
    <string name="preference_showLines_1" translatable="false">Use lines instead of bars (area) for spectrum</string>
    <string name="preference_showLines_2" translatable="false">Spectrum uses lines</string>
    <string name="preference_spectrumRange_1" translatable="false">Show range of spectrum in dB scale</string>
    <string name="preference_spectrumRange_2" translatable="false">Spectrum range scale</string>
    <string name="preference_spectrogramAppearance" translatable="false">Spectrogram appearance</string>
    <string name="preference_spectrogramShifting_1" translatable="false">The whole spectrogram shifts on a rolling basis over time</string>
    <string name="preference_spectrogramShifting_2" translatable="false">Spectrogram shifting</string>
    <string name="preference_spectrogramTimeAxis_1" translatable="false">Turns on/off time axis label</string>
    <string name="preference_spectrogramTimeAxis_2" translatable="false">Show time axis</string>
    <string name="preference_spectrogramShowFreqAlongX_1" translatable="false">So time axis is Y axis</string>
    <string name="preference_spectrogramShowFreqAlongX_2" translatable="false">Frequency as X axis</string>
    <string name="preference_spectrogramSmoothRender_1" translatable="false">Smoothly render the spectrogram</string>
    <string name="preference_spectrogramSmoothRender_2" translatable="false">Smooth render</string>
    <string name="preference_spectrogramColorMap_1" translatable="false">Choose color of dB to map</string>
    <string name="preference_spectrogramColorMap_2" translatable="false">Color Map</string>
    <string name="preference_spectrogramRange_1" translatable="false">Show range of spectrogram in dB scale</string>
    <string name="preference_spectrogramRange_2" translatable="false">Spectrogram range</string>
    <string name="preference_spectrogramDuration_1" translatable="false">Show duration of spectrogram (when average number is set to 1)</string>
    <string name="preference_spectrogramDuration_2" translatable="false">Spectrogram duration</string>
    <string name="preference_spectrogramFPS_1" translatable="false">Higher for smoother graphic, lower to save battery.</string>
    <string name="preference_spectrogramFPS_2" translatable="false">Limit Refresh rate</string>
    <string name="preference_miscellaneous" translatable="false">Miscellaneous</string>
    <string name="preference_warnOverrun_1" translatable="false">Show warning if audio buffer enters overrun state</string>
    <string name="preference_warnOverrun_2" translatable="false">Overrun Warning</string>
    <string name="preference_developerSetting" translatable="false">Developer Settings</string>
    <string name="preference_spectrogramLogPlotMethod_1" translatable="false">Replot spectrogram only while zooming (Saves battery)</string>
    <string name="preference_spectrogramLogPlotMethod_2" translatable="false">Log plot: Replot on zoom</string>

    <string name="app_name" translatable="false">Depression Analysis</string>
    <string name="title_activity_recording" translatable="false">Recording</string>
    <string name="recOn" translatable="false">Recording On</string>
    <string name="recOff" translatable="false">Recording Off</string>
    <string name="toggleText" translatable="false">ToggleButton</string>
    <string name="lblID" translatable="false">IC/FIN:</string>
    <string name="lblName" translatable="false">Name:</string>
    <string name="nameHint" translatable="false">John Smith</string>
    <string name="idHint" translatable="false">S1234567A</string>
    <string name="sessionStart" translatable="false">Launch Session</string>
    <string name="lblDate" translatable="false">Date:</string>
    <string name="lblStartTime" translatable="false">Start Time:</string>
    <string name="lblElapsedTime" translatable="false">Elapsed Time:</string>
    <string name="title_activity_test_api" translatable="false">TestAPI</string>
    <string name="api_test" translatable="false">Api Test</string>
    <string name="btnGet" translatable="false">GET</string>
    <string name="btnPost" translatable="false">POST</string>

</resources>
